--- a/Game.ipynb
+++ b/Game.ipynb
@@ -91,25 +91,31 @@
     "class PropertyButton(pygame.sprite.Sprite):\n",
     "    def __init__(self, position):\n",
     "        super().__init__()\n",
-    "        vertical_buttons = [1, 3, 5, 8, 9, 21, 23, 24, 26, 27, 29]\n",
-    "        if position in vertical_buttons:\n",
+    "        self.vertical_buttons = [2, 4, 6, 9, 10, 22, 24, 25, 27, 28, 30]\n",
+    "        if position in self.vertical_buttons:\n",
     "            self.image = pygame.Surface((65, 105), pygame.SRCALPHA)\n",
     "        else:\n",
     "            self.image = pygame.Surface((105,65), pygame.SRCALPHA)\n",
-    "        self.image.fill((255, 255, 255, 100))\n",
+    "        self.image.fill((255, 255, 255, 150))\n",
     "        \n",
     "        self.position = position\n",
     "        self.rect = self.image.get_rect(topleft=self.get_position(position))\n",
     "\n",
     "    def get_position(self, pos):\n",
     "        # Define positions for different Monopoly properties\n",
-    "        property_positions = {1: (630, 694), 3: (499, 694), 6: (302, 696), 8: (173, 697), 9: (106, 695), \n",
-    "             11: (0, 631), 13: (0, 498), 14: (1, 433), 16: (0, 300), 18: (2, 172), 19: (2, 106),\n",
-    "             21: (105, 1), 23: (236, 1), 24: (301, 0), 26: (434, 1), 27: (497, 1), 29: (629, 0),\n",
-    "             31: (695, 105), 32: (694, 170), 34: (695, 300), 37: (695, 498), 39: (695, 629)}\n",
+    "        property_positions = {2: (630, 694), 4: (499, 694), 7: (302, 696), 9: (173, 697), 10: (106, 695), \n",
+    "         12: (0, 631), 14: (0, 498), 15: (1, 433), 17: (0, 300), 19: (2, 172), 20: (2, 106),\n",
+    "         22: (105, 1), 24: (236, 1), 25: (301, 0), 27: (434, 1), 28: (497, 1), 30: (629, 0),\n",
+    "         32: (695, 105), 33: (694, 170), 35: (695, 300), 38: (695, 498), 40: (695, 629)}\n",
     "        return property_positions[self.position]\n",
-    "    \n",
-    "\n"
+    "    def mouseOn(self, mousePos):\n",
+    "        if position in self.vertical_buttons:\n",
+    "            if self.get_position(self.position)[0] < mousePos[0] < self.get_position(self.position)[0] + 65 and self.get_position(self.position)[1] < mousePos[1] < self.get_position(self.position)[1] + 110:\n",
+    "                return True\n",
+    "        else:\n",
+    "            if self.get_position(self.position)[0] < mousePos[0] < self.get_position(self.position)[0] + 110 and self.get_position(self.position)[1] < mousePos[1] < self.get_position(self.position)[1] + 65:\n",
+    "                return True\n",
+    "        return False\n"
    ]
   },
   {
@@ -121,7 +127,7 @@
    },
    "outputs": [],
    "source": [
-    "property_numbers = [1, 3, 6, 8, 9, 11, 13, 14, 16, 18, 19, 21, 23, 24, 26, 27, 29, 31, 32, 34, 37, 39]\n",
+    "property_numbers = [2, 4, 7, 9, 10, 12, 14, 15, 17, 19, 20, 22, 24, 25, 27, 28, 30, 32, 33, 35, 38, 40]\n",
     "property_buttons = [PropertyButton(position) for position in property_numbers]"
    ]
   },
@@ -186,6 +192,7 @@
     "        self.cost = cost\n",
     "        #is this a smart way of doing this? idk\n",
     "        self.house_count = 0\n",
+    "        self.hotel_count = 0\n",
     "        self.rent_costs = [25, 50, 100, 200]\n",
     "        super().__init__(*args, **kwargs)\n",
     "    def get_rent_cost(self):\n",
@@ -506,6 +513,7 @@
     "        if self.position > 40:\n",
     "            self.position = self.position - 40\n",
     "            self.cash += 200\n",
+    "            print(\"+200 for passing go\")\n",
     "        if self.position <1:\n",
     "            self.position = self.position + 40\n",
     "    \n",
@@ -569,18 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "353a3e8d-3f9a-47b3-8e41-df839f2ce164",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "98dcbcaf-6fbc-471b-92d7-4f3dd2de61e0",
+   "id": "592c6c36-f4bd-4127-a545-4ac8e1e53002",
    "metadata": {
     "tags": []
    },
@@ -589,45 +587,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 4]\n",
-      "[]\n",
-      "[6, 1]\n",
-      "[]\n",
-      "[6, 3]\n",
-      "['New York Avenue']\n",
-      "[1, 4]\n",
-      "[]\n",
-      "[5, 6]\n",
-      "['New York Avenue']\n",
       "[5, 5]\n",
       "[]\n",
       "[5, 4]\n",
-      "['Pacific Avenue']\n",
-      "[6, 6]\n",
       "['New York Avenue']\n",
-      "[2, 1]\n",
-      "['Pacific Avenue', 'Pennsylvania Avenue']\n",
-      "[3, 4]\n",
-      "['New York Avenue']\n",
-      "[6, 3]\n",
-      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
-      "[6, 4]\n",
-      "['New York Avenue']\n",
-      "[1, 3]\n",
-      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
-      "[3, 1]\n",
-      "['New York Avenue', 'Virginia Avenue']\n",
-      "[3, 4]\n",
-      "paid 12 for rent\n",
-      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
-      "[3, 6]\n",
-      "['New York Avenue', 'Virginia Avenue', 'Indiana Avenue']\n",
-      "[1, 5]\n",
-      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue']\n",
-      "[2, 3]\n",
-      "['New York Avenue', 'Virginia Avenue', 'Indiana Avenue']\n",
-      "[4, 2]\n",
-      "['Pacific Avenue', 'Pennsylvania Avenue', 'Baltic Avenue', 'Atlantic Avenue']\n"
+      "[2, 6]\n",
+      "['Vermont Avenue']\n"
      ]
     },
     {
@@ -637,12 +602,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 301\u001b[0m\n\u001b[0;32m    298\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    299\u001b[0m \u001b[38;5;66;03m#add money info   \u001b[39;00m\n\u001b[1;32m--> 301\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmoneyText1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_rect1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    302\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(moneyText2, text_rect2)\n\u001b[0;32m    303\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(gameAnnouncementText, gameAnnouncement_rect)\n",
+      "Cell \u001b[1;32mIn[12], line 328\u001b[0m\n\u001b[0;32m    325\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    326\u001b[0m \u001b[38;5;66;03m#add money info   \u001b[39;00m\n\u001b[1;32m--> 328\u001b[0m \u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmoneyText1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_rect1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    329\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(moneyText2, text_rect2)\n\u001b[0;32m    330\u001b[0m window\u001b[38;5;241m.\u001b[39mblit(gameAnnouncementText, gameAnnouncement_rect)\n",
       "\u001b[1;31merror\u001b[0m: display Surface quit"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "all_sprites = pygame.sprite.Group()\n",
     "\n",
     "all_sprites.add(roll)\n",
@@ -824,13 +791,12 @@
     "                    for p in range(1, playerCount):\n",
     "                        if p != player.playerNumber:\n",
     "                            players[p - 1].cash -= 10\n",
-    "                    # not sure how to do take $50 from the other players\n",
     "                elif action == \"Your building loan matures. Collect $150\":\n",
     "                    player.cash += 150\n",
     "            \n",
-    "            #if landed in an unowned property/railroad space\n",
+    "            #if landed in an owned property/railroad space\n",
     "            for p in players:\n",
-    "                if p != player.playerNumber:\n",
+    "                if p.playerNumber != player.playerNumber:\n",
     "                    for opponentProperty in p.properties:\n",
     "                        if player.position == opponentProperty.position:\n",
     "                            rentToPay = opponentProperty.get_rent_cost()\n",
@@ -893,12 +859,13 @@
     "    pygame.display.update()\n",
     "    waitToEndTurn = True\n",
     "    endTurnClicked = False\n",
-    "    \n",
+    "    buyHouseClicked = False\n",
     "    propertyPositionsList = []\n",
     "    for prop in player.properties:\n",
     "        propertyPositionsList.append(prop.position)\n",
     "    set_of_monopolies = find_monopoly_set(propertyPositionsList)\n",
     "    if set_of_monopolies:\n",
+    "        print(\"player has a set\")\n",
     "        buttonsToDraw = []\n",
     "        for b in property_buttons:\n",
     "            if b.position in set_of_monopolies:\n",
@@ -908,6 +875,9 @@
     "            window.blit(entity.surf, entity.rect)\n",
     "        pygame.display.update()\n",
     "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "        while waitToEndTurn:\n",
     "            mousePos = pygame.mouse.get_pos()\n",
     "            event = pygame.event.wait()\n",
@@ -916,9 +886,33 @@
     "                pygame.quit()\n",
     "            \n",
     "            #if clicked on buttons buy house/hotel\n",
-    "\n",
-    "\n",
-    "\n",
+    "            for button in buttonsToDraw:\n",
+    "                if button.mouseOn(mousePos):\n",
+    "                    if pygame.mouse.get_pressed()[0] == True:\n",
+    "                        endTurnClicked = True\n",
+    "                    if endTurnClicked:\n",
+    "                        #if released button, do action\n",
+    "                        if pygame.mouse.get_pressed()[0] == False:\n",
+    "                            endTurnClicked = False\n",
+    "                            for p in player.properties:\n",
+    "                                if p.position == button.position:\n",
+    "                                    houseCost = 0\n",
+    "                                    if p.color == \"Brown\" or p.color == \"Light Blue\":\n",
+    "                                        houseCost = 50\n",
+    "                                    elif p.color == \"Purple\" or p.color == \"Orange\":\n",
+    "                                        houseCost = 100\n",
+    "                                    elif p.color == \"Red\" or p.color == \"Yellow\":\n",
+    "                                        houseCost = 150\n",
+    "                                    elif p.color == \"Green\" or p.color == \"Blue\":\n",
+    "                                        houseCost = 200\n",
+    "                                    player.cash -= houseCost\n",
+    "                                    p.house_count += 1\n",
+    "                                    if p.house_count >= 5:\n",
+    "                                        p.house_count = 0\n",
+    "                                        p.hotel_count = 1\n",
+    "                                    \n",
+    "                            \n",
+    "                    \n",
     "\n",
     "            if 200 <= mousePos[0] <= 400 and 450 <= mousePos[1] <= 550: \n",
     "                if pygame.mouse.get_pressed()[0] == True:\n",
@@ -929,7 +923,7 @@
     "                        endTurnClicked = False\n",
     "                        waitToEndTurn = False\n",
     "        for i in range(len(buttonsToDraw)):\n",
-    "            all_sprites.remove(buttonsToDraw[i]\n",
+    "            all_sprites.remove(buttonsToDraw[i])\n",
     "\n",
     "#list of all player objects\n",
     "players = [P1,P2]\n",
